src/objects/GalaxyBudgetCall__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The Budget Call jobs are run in a sequence. The finish method of the first job will schedule the next job. Since the job will still remain active in the system, we will see the error message about scheduling a job that is already existing. We will use this field to delete the job as soon as we’re done executing that step in the process.</description>
    <fields>
        <fullName>AdjustFiscalYear__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The Fiscal Year () function always return FY value one less than the current FY. If this changes in the future, this value should be set to &apos;0&apos;.</description>
        <label>AdjustFiscalYear</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_Jobs_Run_Date__c</fullName>
        <description>The Date when all APEX jobs finished executing ...</description>
        <label>Apex Jobs Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataToStoreforXFYs__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Budget Call Data - Calculate and save data for +- &quot;X&quot; years.</description>
        <label>DataToStoreforXFYs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastLoad__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Pick up records from the data object for the last &quot;X&quot; days specified ...</description>
        <label>DaysSinceLastLoad</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule10_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule10 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule11_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule11 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule12_ID__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Schedule12 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GalaxyBudgetCall</label>
</CustomObject>